external-crates/move/crates/move-compiler/tests/move_2024/extensions/invalid_fn_redefinition@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/extensions/invalid_fn_redefinition.move:7:9
  │
2 │     fun f(): u64 { 0 }
  │         - Module member or alias previously defined here
  ·
7 │     fun f(): u64 { 1 }
  │         ^ Module extension defines member 'f', which shadows previous definition
  │
  = Top level names in a namespace must be unique
